# embed

./: .gitignore  Cargo.toml  README.md
src/: main.rs  old.rs
