[package]
name = "embed"
version = "0.1.0"
authors = ["Ethan Ray <ethan.gregory.ray@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "embed"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.95"
wifi = "0.1.0"
embedded-svc = "0.28.1"
heapless = "0.8.0"
rand = "0.9.0"

[build-dependencies]
embuild = "0.33"
